--- a/MamboFoo.html
+++ b/MamboFoo.html
@@ -11,27 +11,27 @@
             <div class="life_armor enemigo">
                 <p>Life&Armor</p>
                 <div class="corazon-barra enemigo">
-                    <img class="imagen uno" src="/icons/heart.png" alt="">
-                    <img class="imagen dos" src="/icons/heart.png" alt="">
-                    <img class="imagen tres" src="/icons/heart.png" alt="">
+                    <img class="imagen uno" src="./icons/heart.png" alt="">
+                    <img class="imagen dos" src="./icons/heart.png" alt="">
+                    <img class="imagen tres" src="./icons/heart.png" alt="">
                 </div>
                 <div class="escudo-barra enemigo">
-                    <img class="imagen uno" src="/icons/shield.png" alt="shield">
-                    <img class="imagen dos" src="/icons/shield.png" alt="shield">
-                    <img class="imagen tres" src="/icons/shield.png" alt="shield">
+                    <img class="imagen uno" src="./icons/shield.png" alt="shield">
+                    <img class="imagen dos" src="./icons/shield.png" alt="shield">
+                    <img class="imagen tres" src="./icons/shield.png" alt="shield">
                 </div>
             </div>
             <div class="life_armor tu">
                 <p>Life&Armor</p>
                 <div class="corazon-barra tu">
-                    <img class="imagen uno" src="/icons/heart.png" alt="">
-                    <img class="imagen dos" src="/icons/heart.png" alt="">
-                    <img class="imagen tres" src="/icons/heart.png" alt="">
+                    <img class="imagen uno" src="./icons/heart.png" alt="">
+                    <img class="imagen dos" src="./icons/heart.png" alt="">
+                    <img class="imagen tres" src="./icons/heart.png" alt="">
                 </div>
                 <div class="escudo-barra tu">
-                    <img class="imagen uno" src="/icons/shield.png" alt="shield">
-                    <img class="imagen dos" src="/icons/shield.png" alt="shield">
-                    <img class="imagen tres" src="/icons/shield.png" alt="shield">
+                    <img class="imagen uno" src="./icons/shield.png" alt="shield">
+                    <img class="imagen dos" src="./icons/shield.png" alt="shield">
+                    <img class="imagen tres" src="./icons/shield.png" alt="shield">
                 </div>
             </div>
         </div>
