--- a/MamboFoo.html
+++ b/MamboFoo.html
@@ -49,13 +49,13 @@
             <div class="campo tu">
                 <div class="franja-atk-def-btn">
                     <button class="bottom-btn atk-btn" onclick="atkNow()">
-                        <strong>ATK<img class="imagen" src="heart.png" alt=""></strong>
+                        <strong>ATK<img class="imagen" src="./icons/heart.png" alt=""></strong>
                     </button>
                     <button class="bottom-btn switch-btn" onclick="switchDefAtk()">
                         <strong>SWITCH</strong>
                     </button>
                     <button class="bottom-btn def-btn" onclick="defNow()">
-                        <strong>DEF<img class="imagen" src="shield.png" alt="shield"></strong>
+                        <strong>DEF<img class="imagen" src="./icons/shield.png" alt="shield"></strong>
                     </button>
                 </div>
                 <p class="nombre-tu">You</p>
